--- a/src/app/Pages/assessmentdetail-exp/assessmentdetail-exp.component.html
+++ b/src/app/Pages/assessmentdetail-exp/assessmentdetail-exp.component.html
@@ -1,10 +1,5 @@
 <div class="container-fluid">
   <app-toast />
-  <app-driversearch
-    #driverSearchModal
-    (driverSelected)="onDriverSelected($event)"
-  ></app-driversearch>
-
   @if (isLoading()) {
   <div
     class="d-flex justify-content-center align-items-center"
@@ -18,17 +13,7 @@
 
   <div class="bg-success bg-opacity-50 fs-7 fw-medium mt-3">
     <h6 class="ms-3">Driver Information</h6>
-    <div class="col-auto m-2">
-      <button
-        type="submit"
-        class="btn btn-warning btn-sm"
-        (click)="openSearchModal()"
-        title="Driver Search Modal"
-      >
-        <i class="fa-regular fa-circle-user me-1"></i>Select Driver
-      </button>
-    </div>
-    @if (isDriverLoaded()) {
+
     <form
       [formGroup]="driverForm"
       class="row row-cols-lg-auto g-3 align-items-end ms-1"
@@ -261,7 +246,7 @@
         </div>
       </div>
     </form>
-    }
+
     <hr />
   </div>
 
@@ -497,39 +482,6 @@
       </div>
       <hr />
     </div>
-    <div class="row">
-      <div class="col-12">
-        @if (!showInitial()) {
-        <button
-          (click)="toggleInitial()"
-          class="btn btn-sm btn-outline-secondary float-end"
-          title="Add Initial Assessment Column"
-        >
-          <i class="fa-solid fa-circle-plus"></i> Initial Assessment
-        </button>
-        } @if (showInitial() && !showMiddle()) {
-        <button
-          (click)="toggleMiddle()"
-          class="btn btn-sm btn-outline-secondary float-end"
-          title="Add Middle Assessment Column"
-        >
-          <i class="fa-solid fa-circle-plus"></i> Middle Assessment
-        </button>
-        } @if (showMiddle()) {<button
-          (click)="toggleMiddle()"
-          class="btn btn-sm btn-outline-secondary float-end"
-          title="Remove Middle Assessment Column"
-        >
-          <i class="fa-solid fa-xmark"></i> Remove Middle</button
-        >} @if (showInitial()) {<button
-          (click)="toggleInitial()"
-          class="btn btn-sm btn-outline-secondary float-end"
-          title="Remove All Assessment Columns"
-        >
-          <i class="fa-solid fa-xmark"></i> Remove All</button
-        >}
-      </div>
-    </div>
     <div formArrayName="categories">
       @for (category of categories.controls; track $index;let i = $index) {
       <div [formGroupName]="i">
@@ -582,7 +534,7 @@
                             }}"
                           >
                             {{ slavecategory.get("name")?.value }}
-                            <span class="text-muted ms-2">
+                            <span class="ms-2">
                               ({{
                                 getFinalScoreTotal(
                                   category,
@@ -613,11 +565,8 @@
                                   <tr>
                                     <th>Assessment Description</th>
                                     <th>Ini</th>
-                                    @if (showInitial()) {
                                     <th>Initial Score</th>
-                                    } @if (showMiddle()) {
                                     <th>Middle Score</th>
-                                    }
                                     <th>Final Score</th>
                                   </tr>
                                 </thead>
@@ -636,7 +585,7 @@
                                       {{ slavecategory.get("initials")?.value
                                       }}{{ activity.get("initials")?.value }}
                                     </td>
-                                    @if (showInitial()) {
+
                                     <td style="width: 80px">
                                       <input
                                         type="number"
@@ -648,7 +597,7 @@
                                         (input)="restrictToSingleDigit($event)"
                                       />
                                     </td>
-                                    } @if (showMiddle()) {
+
                                     <td style="width: 80px">
                                       <input
                                         type="number"
@@ -661,7 +610,6 @@
                                         (input)="restrictToSingleDigit($event)"
                                       />
                                     </td>
-                                    }
 
                                     <td style="width: 80px">
                                       <input
@@ -697,30 +645,71 @@
     </div>
     <div class="row">
       <div class="col-12 text-center">
-        <div class="btn-group" role="group" aria-label="Default button group">
-          <button
-            type="submit"
-            class="btn btn-outline-warning"
-            (click)="saveAssessment()"
-            title="Save Assessment"
-          >
-            @if (isAPICallInProgress()) {
-            <span
-              class="spinner-border spinner-border-sm"
-              aria-hidden="true"
-            ></span>
-            <span role="status">Loading...</span>
-            } Save
-          </button>
-          <button
-            type="button"
-            class="btn btn-outline-secondary"
-            (click)="formRest()"
-            title="Reset Assessment Form"
-          >
-            Reset
-          </button>
-        </div>
+        <button
+          class="btn btn-outline-warning btn-sm ms-1"
+          type="button"
+          routerLink="/addassessment"
+          title="Add Assessment"
+        >
+          <i class="fa-solid fa-circle-plus"></i>
+          Add New Assessment
+        </button>
+        <button
+          class="btn btn-outline-warning btn-sm ms-1"
+          type="button"
+          (click)="printPage()"
+          title="Print page"
+        >
+          <i class="fa-solid fa-print"></i>
+          Print
+        </button>
+        @if (isEdit()) {
+        <button
+          id="savebtn"
+          class="btn btn-outline-warning btn-sm ms-1"
+          type="submit"
+          (click)="saveAssessment(); toggleEdit()"
+          title="Save DDC Form"
+        >
+          <i class="fa-regular fa-floppy-disk"></i>
+          @if (isAPICallInProgress()) {
+          <span
+            class="spinner-border spinner-border-sm"
+            aria-hidden="true"
+          ></span>
+          <span role="status">Loading...</span>
+          } Save
+        </button>
+
+        <button
+          type="reset"
+          class="btn btn-outline-warning btn-sm ms-1"
+          (click)="formRest()"
+          title="Reset changes"
+        >
+          <i class="fa-solid fa-window-restore"></i>
+          Reset
+        </button>
+        <button
+          class="btn btn-outline-warning btn-sm ms-1"
+          (click)="toggleEdit()"
+          title="Cancel"
+        >
+          <i class="fa-regular fa-rectangle-xmark"></i>
+          cancel
+        </button>
+        }@else{
+        <button
+          class="btn btn-outline-warning btn-sm ms-1"
+          type="button"
+          (click)="toggleEdit()"
+          title="Edit Assessment"
+        >
+          <i class="far fa-edit"></i>
+
+          {{ "Edit" }}
+        </button>
+        }
       </div>
     </div>
   </form>
