--- a/src/app/Pages/allassessments/allassessments.component.html
+++ b/src/app/Pages/allassessments/allassessments.component.html
@@ -189,6 +189,10 @@
           <span>Selected Row</span>
         </div>
         <div class="legend-item fs-7">
+          <span class="legend-box legend-red"></span>
+          <span>Not assessed</span>
+        </div>
+        <div class="legend-item fs-7">
           <button
             type="button"
             class="btn btn-outline-warning btn-sm"
@@ -227,10 +231,21 @@
     </div>
   </div>
   <div>
+    @if (isLoading()) {
+    <div
+      class="d-flex justify-content-center align-items-center"
+      style="height: 100vh"
+    >
+      <div class="spinner-border text-primary" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+    </div>
+    } @if (!isLoading()) {
     <ag-grid-angular
-      [class]="themeClass"
+      [class]="themeClass()"
       [rowData]="sessionsWithName()"
       [columnDefs]="colDefs"
+      [getRowStyle]="getRowStyle"
       [pagination]="true"
       [paginationPageSize]="20"
       [paginationPageSizeSelector]="[5, 10, 20, 50, 100]"
@@ -238,7 +253,7 @@
       (gridReady)="onGridReady($event)"
       [gridOptions]="gridOptions"
     ></ag-grid-angular>
+    }
   </div>
-
   <app-delete-confirmation #confirmationModal></app-delete-confirmation>
 </div>
