--- a/src/app/Pages/alldrivers/alldrivers.component.html
+++ b/src/app/Pages/alldrivers/alldrivers.component.html
@@ -203,8 +203,17 @@
       </button>
     </div>
   </div>
-
   <div>
+    @if (isLoading()) {
+    <div
+      class="d-flex justify-content-center align-items-center"
+      style="height: 100vh"
+    >
+      <div class="spinner-border text-primary" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+    </div>
+    } @if (!isLoading()) {
     <ag-grid-angular
       [class]="themeClass()"
       [rowData]="driversWithName()"
@@ -217,6 +226,7 @@
       (gridReady)="onGridReady($event)"
       [gridOptions]="gridOptions"
     ></ag-grid-angular>
+    }
   </div>
   <app-delete-confirmation #confirmationModal></app-delete-confirmation>
   <router-outlet></router-outlet>
