Added word document export

--- a/src/app/Pages/assessmentsreport/assessmentsreport.component.html
+++ b/src/app/Pages/assessmentsreport/assessmentsreport.component.html
@@ -366,13 +366,21 @@
               >
                 <i class="fa-solid fa-file-pdf me-1"></i>Generate Certificates
               </button>
-              <button
+              <!-- <button
                 class="btn btn-warning ms-1"
                 type="button"
                 (click)="downloadDriverReport()"
                 title="Download PDF"
               >
                 <i class="fa-solid fa-file-pdf me-1"></i>Generate Card
+              </button> -->
+              <button
+                class="btn btn-warning ms-1"
+                type="button"
+                (click)="downloadWordReport()"
+                title="Download Word"
+              >
+                <i class="fa-solid fa-file-word me-1"></i>Generate Cards
               </button>
               }
             </p>
