--- a/src/app/Pages/driverdetail/driverdetail.component.html
+++ b/src/app/Pages/driverdetail/driverdetail.component.html
@@ -22,14 +22,14 @@
               ></i
               >{{ driverForm.get("name")?.value }}
             </h3>
-            <p>
+            <p class="mb-1">
               <i
                 title="DriverDBID"
                 class="fa-regular fa-id-badge me-1 text-success"
               ></i
               >{{ driverForm.get("id")?.value }}
             </p>
-            <p>
+            <p class="mb-1">
               <i
                 title="Created By"
                 class="fa-solid fa-user-tie me-2 text-success"
@@ -41,7 +41,7 @@
               ></i
               >{{ driverForm.get("created_at")?.value | date }}
             </p>
-            <p>
+            <p class="mb-1">
               <i
                 title="Modified By"
                 class="fa-solid fa-user-pen me-1 text-success"
