--- a/src/app/Pages/assessmentdetail/assessmentdetail.component.css
+++ b/src/app/Pages/assessmentdetail/assessmentdetail.component.css
@@ -1,23 +1,35 @@
+.accordion-header {
+  font-size: 0.875rem; /* Small font size */
+  height: 2.5rem; /* Adjust height as needed */
+}
+
+.accordion-button {
+  background-color: #ffc107; /* Bootstrap warning color */
+  color: #000; /* Text color */
+  padding: 0.5rem 1rem; /* Adjust padding to control height */
+}
+
+.accordion-button:not(.collapsed) {
+  color: #000; /* Text color when expanded */
+  background-color: #efd78f6e; /* Background color when expanded */
+}
+.score-input {
+  width: 30px;
+  text-align: center;
+  margin-right: 10px;
+}
 .table-bordered th,
 .table-bordered td {
   text-align: center;
   vertical-align: middle;
 }
-
-.form-check {
-  margin-bottom: 10px;
+/* Chrome, Safari, Edge, Opera */
+.score-input::-webkit-outer-spin-button,
+.score-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
+
 .my-input {
   width: 100px; /* Adjust the width as needed */
-}
-.radio-group {
-  margin-right: 5px; /* Adjust this value to reduce the space between radio buttons */
-}
-
-.form-check-input {
-  margin-right: 3px; /* Adjust the space between the radio button and label */
-}
-
-td {
-  white-space: nowrap; /* Prevent the column content from wrapping */
 }
